<resources>

    <string name="app">Заметки</string>

    <string name="yes">Да</string>

    <string name="add">Добавить</string>
    <string name="save">Сохранить</string>
    <string name="copy">Копировать</string>

    <string name="title">Заголовок</string>
    <string name="text">Текст</string>

    <string name="title_action_new">Создать заметку</string>
    <string name="title_action_edit">Редактировать заметку</string>

    <string name="alert_dialog_title">Удалить заметку?</string>
    <string name="alert_dialog_message">Заметка будет безвозвратно удалена</string>

</resources>